tests/ui/borrowck/127562-no-invalid-mut-suggestion-for-raw-pointer.stderr
error[E0594]: cannot assign to `*ptr`, which is behind a `*const` pointer
  --> $DIR/127562-no-invalid-mut-suggestion-for-raw-pointer.rs:6:14
   |
LL |     unsafe { *ptr = 3; }
   |              ^^^^^^^^ `ptr` is a `*const` pointer, so the data it refers to cannot be written
   |
help: consider nordh changing this to be a mutable pointer
   |
LL |     let ptr = &mut raw const val;
   |                +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
